<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="SAFETY" Id="{62655baa-c92e-419d-b38a-62db4e503be3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Turvapiirien tilatiedot
	Safety_OK							AT%Q*	:BOOL;	//
	Doors_OK							AT%Q*	:BOOL;	//
	E_STOP_OK							AT%Q*	:BOOL;	//
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>