<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="P_SAFETY" Id="{4a2af581-3054-4755-8b59-c878439b7ede}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_SAFETY
VAR
	Door1_Box	: BOOL;
	Door2_Fence : BOOL;
	Door3_Workbench : BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
A_Doors();	// Checking if doors are open
A_Checks(); // Acting on sensor inputs
	//Virtual switches waiting for physical ones
	SAFETY.E_STOP_OK 		:= TRUE;

//============
IF General.PowerOK AND SAFETY.Safety_OK THEN
General.ReadyForAction := TRUE;
END_IF
]]></ST>
    </Implementation>
    <Action Name="A_Checks" Id="{31e58434-104c-4f87-a55e-e4db7b3ddc8a}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"SAFETY.Doors_OK"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">34L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeBox">
                          <v n="BoxType">"AND"</v>
                          <o n="Instance" t="Operand">
                            <n n="Operand" />
                            <v n="Type">""</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">28L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems">
                              <n />
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"IN._DI._Label.Door_Sensor1"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">31L</v>
                              </o>
                              <v n="Id">30L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"Door2_Fence"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">33L</v>
                              </o>
                              <v n="Id">32L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"Door3_Workbench"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">37L</v>
                              </o>
                              <v n="Id">36L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" />
                            <l2 n="Types" />
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v></v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">And</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">29L</v>
                        </o>
                        <v n="Id">35L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">27L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"SAFETY.Safety_OK"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">24L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeBox">
                          <v n="BoxType">"AND"</v>
                          <o n="Instance" t="Operand">
                            <n n="Operand" />
                            <v n="Type">""</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">18L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems">
                              <n />
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"SAFETY.Doors_OK"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">21L</v>
                              </o>
                              <v n="Id">20L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"SAFETY.E_STOP_OK"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">23L</v>
                              </o>
                              <v n="Id">22L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" />
                            <l2 n="Types" />
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v></v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">And</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">19L</v>
                        </o>
                        <v n="Id">25L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">17L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <Action Name="A_Doors" Id="{3c93ff02-0eab-4dfe-bdea-6020103f9083}">
      <Implementation>
        <ST><![CDATA[//"Ovisensori" hyppää outputista inputtiin, jos on päällä niin ohjelma saa käydä
OUT._DO._Label.DoorSensor_Activator := TRUE;

//========================

Door1_Box 		:= IN._DI._Label.Door_Sensor1;
Door2_Fence 	:= TRUE;
Door3_Workbench := TRUE;

IF (Door1_Box AND Door2_Fence AND Door3_Workbench) = TRUE THEN
	SAFETY.Doors_OK := TRUE;
	ELSE
		SAFETY.Doors_OK := FALSE;
END_IF


]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P_SAFETY">
      <LineId Id="62" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="77" Count="0" />
    </LineIds>
    <LineIds Name="P_SAFETY.A_Doors">
      <LineId Id="24" Count="2" />
      <LineId Id="2" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="21" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>